--- a/index.html
+++ b/index.html
@@ -4,21 +4,181 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fitness App</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+        }
+        #header {
+            display: flex;
+            justify-content: space-between;
+            padding: 20px;
+            background-color: #4CAF50;
+            color: white;
+        }
+        #main {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 50px;
+        }
+        button {
+            padding: 10px 20px;
+            margin: 10px;
+            font-size: 16px;
+            cursor: pointer;
+        }
+        .back-button {
+            background-color: #FF5722;
+            color: white;
+        }
+        .save-button {
+            background-color: #4CAF50;
+            color: white;
+        }
+    </style>
 </head>
 <body>
-    <div id="app">
-        <header>
-            <h1>Fitness App</h1>
-            <button id="closeApp">Cerrar App</button>
-            <button id="showUserInfo">Ver Info</button>
-        </header>
-        
-        <main id="mainContent">
-            <!-- Aquí se cargará el contenido dinámicamente -->
-        </main>
-    </div>
 
-    <script src="script.js"></script>
+<div id="header">
+    <button onclick="closeApp()">Cerrar App</button>
+    <button onclick="showUserInfo()">Ver Info</button>
+</div>
+
+<div id="main">
+    <!-- Aquí se mostrarán las diferentes vistas -->
+</div>
+
+<script>
+    let userInfo = {
+        nombre: "",
+        peso: "",
+        altura: ""
+    };
+
+    function closeApp() {
+        alert('App cerrada');
+    }
+
+    function showUserInfo() {
+        alert(`Nombre: ${userInfo.nombre}\nPeso: ${userInfo.peso}\nAltura: ${userInfo.altura}`);
+    }
+
+    function showLoginScreen() {
+        const main = document.getElementById('main');
+        main.innerHTML = `
+            <h2>Inicio de Sesión</h2>
+            <label>Nombre de Usuario:</label>
+            <input type="text" id="username"><br><br>
+            <label>Peso:</label>
+            <input type="text" id="weight"><br><br>
+            <label>Altura:</label>
+            <input type="text" id="height"><br><br>
+            <button class="save-button" onclick="login()">Iniciar Sesión</button>
+        `;
+    }
+
+    function login() {
+        userInfo.nombre = document.getElementById('username').value;
+        userInfo.peso = document.getElementById('weight').value;
+        userInfo.altura = document.getElementById('height').value;
+        showMainScreen();
+    }
+
+    function showMainScreen() {
+        const main = document.getElementById('main');
+        main.innerHTML = `
+            <h2>Bienvenido, ${userInfo.nombre}</h2>
+            <button onclick="manageRoutines()">Rutinas</button><br>
+            <button onclick="editUserInfo()">Editar Información del Usuario</button><br>
+            <button onclick="registerExercise()">Registrar Ejercicio Realizado</button><br>
+            <button onclick="viewProgress()">Ver Progreso</button><br>
+            <button class="back-button" onclick="closeApp()">Salir</button>
+        `;
+    }
+
+    function manageRoutines() {
+        const main = document.getElementById('main');
+        main.innerHTML = `
+            <h2>Rutinas</h2>
+            <button onclick="registerRoutines()">Registrar Rutinas</button><br>
+            <button onclick="viewRoutines()">Ver Rutinas</button><br>
+            <button onclick="deleteRoutines()">Eliminar Rutinas</button><br>
+            <button class="back-button" onclick="showMainScreen()">Atrás</button>
+        `;
+    }
+
+    function registerRoutines() {
+        const main = document.getElementById('main');
+        main.innerHTML = `
+            <h2>Registrar Rutinas</h2>
+            <label>Ejercicio:</label>
+            <input type="text" id="exercise"><br><br>
+            <label>Repeticiones:</label>
+            <input type="text" id="reps"><br><br>
+            <label>Series:</label>
+            <input type="text" id="sets"><br><br>
+            <label>Descripción:</label>
+            <input type="text" id="description"><br><br>
+            <button class="save-button" onclick="saveRoutine()">Guardar Rutina</button><br>
+            <button class="back-button" onclick="manageRoutines()">Atrás</button>
+        `;
+    }
+
+    function saveRoutine() {
+        alert('Rutina guardada con éxito!');
+        manageRoutines();
+    }
+
+    function viewRoutines() {
+        alert('Funcionalidad no implementada en la versión web.');
+        manageRoutines();
+    }
+
+    function deleteRoutines() {
+        alert('Funcionalidad no implementada en la versión web.');
+        manageRoutines();
+    }
+
+    function editUserInfo() {
+        const main = document.getElementById('main');
+        main.innerHTML = `
+            <h2>Editar Información del Usuario</h2>
+            <label>Nombre de Usuario:</label>
+            <input type="text" id="username" value="${userInfo.nombre}"><br><br>
+            <label>Peso:</label>
+            <input type="text" id="weight" value="${userInfo.peso}"><br><br>
+            <label>Altura:</label>
+            <input type="text" id="height" value="${userInfo.altura}"><br><br>
+            <button class="save-button" onclick="saveUserInfo()">Guardar Cambios</button><br>
+            <button class="back-button" onclick="showMainScreen()">Atrás</button>
+        `;
+    }
+
+    function saveUserInfo() {
+        userInfo.nombre = document.getElementById('username').value;
+        userInfo.peso = document.getElementById('weight').value;
+        userInfo.altura = document.getElementById('height').value;
+        alert('Información actualizada con éxito!');
+        showMainScreen();
+    }
+
+    function registerExercise() {
+        alert('Funcionalidad no implementada en la versión web.');
+        showMainScreen();
+    }
+
+    function viewProgress() {
+        alert('Funcionalidad no implementada en la versión web.');
+        showMainScreen();
+    }
+
+    // Iniciar mostrando la pantalla de inicio de sesión
+    showLoginScreen();
+</script>
+
 </body>
 </html>
