--- a/index.html
+++ b/index.html
@@ -7,267 +7,177 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-        }
-        #header {
             display: flex;
-            justify-content: space-between;
-            padding: 20px;
-            background-color: #4CAF50;
-            color: white;
-        }
-        #main {
-            display: flex;
-            flex-direction: column;
+            justify-content: center;
             align-items: center;
-            padding: 50px;
+            height: 100vh;
+            margin: 0;
         }
-        button {
-            padding: 10px 20px;
-            margin: 10px;
-            font-size: 16px;
-            cursor: pointer;
+        .container {
+            text-align: center;
         }
-        .back-button {
-            background-color: #FF5722;
-            color: white;
-        }
-        .save-button {
-            background-color: #4CAF50;
-            color: white;
+        .hidden {
+            display: none;
         }
         canvas {
             max-width: 100%;
-            height: auto;
+        }
+        .button {
+            background-color: #007bff;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            margin: 5px;
+        }
+        .button:hover {
+            background-color: #0056b3;
         }
     </style>
 </head>
 <body>
+    <div id="loginScreen" class="container">
+        <h1>Inicio de Sesión</h1>
+        <input type="text" id="name" placeholder="Nombre">
+        <input type="number" id="weight" placeholder="Peso (kg)">
+        <input type="number" id="height" placeholder="Altura (cm)">
+        <button class="button" onclick="showMainMenu()">Entrar</button>
+    </div>
 
-<div id="header">
-    <button onclick="closeApp()">Cerrar App</button>
-    <button onclick="showUserInfo()">Ver Info</button>
-</div>
+    <div id="mainMenu" class="container hidden">
+        <h1>Menú Principal</h1>
+        <button class="button" onclick="showRoutineScreen()">Gestión de Rutinas</button>
+        <button class="button" onclick="showEditUserScreen()">Editar Información</button>
+        <button class="button" onclick="showProgressScreen()">Ver Progreso</button>
+    </div>
 
-<div id="main">
-    <!-- Aquí se mostrarán las diferentes vistas -->
-</div>
+    <div id="routineScreen" class="container hidden">
+        <h1>Gestión de Rutinas</h1>
+        <!-- Aquí puedes añadir la funcionalidad de gestión de rutinas -->
+        <button class="button" onclick="showMainMenu()">Volver al Menú Principal</button>
+    </div>
 
-<script>
-    let userInfo = {
-        nombre: "",
-        peso: "",
-        altura: ""
-    };
+    <div id="editUserScreen" class="container hidden">
+        <h1>Editar Información</h1>
+        <!-- Aquí puedes añadir la funcionalidad de edición de información del usuario -->
+        <button class="button" onclick="showMainMenu()">Volver al Menú Principal</button>
+    </div>
 
-    function closeApp() {
-        alert('App cerrada');
-    }
+    <div id="progressScreen" class="container hidden">
+        <h1>Ver Progreso</h1>
+        <button class="button" onclick="showMainMenu()">Volver al Menú Principal</button>
+        <canvas id="weightChart" width="400" height="200"></canvas>
+        <canvas id="heightChart" width="400" height="200"></canvas>
+    </div>
 
-    function showUserInfo() {
-        alert(`Nombre: ${userInfo.nombre}\nPeso: ${userInfo.peso}\nAltura: ${userInfo.altura}`);
-    }
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script>
+        function showLoginScreen() {
+            document.getElementById('loginScreen').classList.remove('hidden');
+            document.getElementById('mainMenu').classList.add('hidden');
+            document.getElementById('routineScreen').classList.add('hidden');
+            document.getElementById('editUserScreen').classList.add('hidden');
+            document.getElementById('progressScreen').classList.add('hidden');
+        }
 
-    function showLoginScreen() {
-        const main = document.getElementById('main');
-        main.innerHTML = `
-            <h2>Inicio de Sesión</h2>
-            <label>Nombre de Usuario:</label>
-            <input type="text" id="username"><br><br>
-            <label>Peso:</label>
-            <input type="text" id="weight"><br><br>
-            <label>Altura:</label>
-            <input type="text" id="height"><br><br>
-            <button class="save-button" onclick="login()">Iniciar Sesión</button>
-        `;
-    }
+        function showMainMenu() {
+            document.getElementById('loginScreen').classList.add('hidden');
+            document.getElementById('mainMenu').classList.remove('hidden');
+            document.getElementById('routineScreen').classList.add('hidden');
+            document.getElementById('editUserScreen').classList.add('hidden');
+            document.getElementById('progressScreen').classList.add('hidden');
+        }
 
-    function login() {
-        userInfo.nombre = document.getElementById('username').value;
-        userInfo.peso = document.getElementById('weight').value;
-        userInfo.altura = document.getElementById('height').value;
-        showMainScreen();
-    }
+        function showRoutineScreen() {
+            document.getElementById('loginScreen').classList.add('hidden');
+            document.getElementById('mainMenu').classList.add('hidden');
+            document.getElementById('routineScreen').classList.remove('hidden');
+            document.getElementById('editUserScreen').classList.add('hidden');
+            document.getElementById('progressScreen').classList.add('hidden');
+        }
 
-    function showMainScreen() {
-        const main = document.getElementById('main');
-        main.innerHTML = `
-            <h2>Bienvenido, ${userInfo.nombre}</h2>
-            <button onclick="manageRoutines()">Rutinas</button><br>
-            <button onclick="editUserInfo()">Editar Información del Usuario</button><br>
-            <button onclick="registerExercise()">Registrar Ejercicio Realizado</button><br>
-            <button onclick="viewProgress()">Ver Progreso</button><br>
-            <button class="back-button" onclick="closeApp()">Salir</button>
-        `;
-    }
+        function showEditUserScreen() {
+            document.getElementById('loginScreen').classList.add('hidden');
+            document.getElementById('mainMenu').classList.add('hidden');
+            document.getElementById('routineScreen').classList.add('hidden');
+            document.getElementById('editUserScreen').classList.remove('hidden');
+            document.getElementById('progressScreen').classList.add('hidden');
+        }
 
-    function manageRoutines() {
-        const main = document.getElementById('main');
-        main.innerHTML = `
-            <h2>Rutinas</h2>
-            <button onclick="registerRoutines()">Registrar Rutinas</button><br>
-            <button onclick="viewRoutines()">Ver Rutinas</button><br>
-            <button onclick="deleteRoutines()">Eliminar Rutinas</button><br>
-            <button class="back-button" onclick="showMainScreen()">Atrás</button>
-        `;
-    }
+        function showProgressScreen() {
+            document.getElementById('loginScreen').classList.add('hidden');
+            document.getElementById('mainMenu').classList.add('hidden');
+            document.getElementById('routineScreen').classList.add('hidden');
+            document.getElementById('editUserScreen').classList.add('hidden');
+            document.getElementById('progressScreen').classList.remove('hidden');
+            drawCharts();
+        }
 
-    function registerRoutines() {
-        const main = document.getElementById('main');
-        main.innerHTML = `
-            <h2>Registrar Rutinas</h2>
-            <label>Ejercicio:</label>
-            <input type="text" id="exercise"><br><br>
-            <label>Repeticiones:</label>
-            <input type="text" id="reps"><br><br>
-            <label>Series:</label>
-            <input type="text" id="sets"><br><br>
-            <label>Descripción:</label>
-            <input type="text" id="description"><br><br>
-            <button class="save-button" onclick="saveRoutine()">Guardar Rutina</button><br>
-            <button class="back-button" onclick="manageRoutines()">Atrás</button>
-        `;
-    }
+        function drawCharts() {
+            const weightCtx = document.getElementById('weightChart').getContext('2d');
+            const heightCtx = document.getElementById('heightChart').getContext('2d');
 
-    function saveRoutine() {
-        alert('Rutina guardada con éxito!');
-        manageRoutines();
-    }
-
-    function viewRoutines() {
-        const main = document.getElementById('main');
-        main.innerHTML = `
-            <h2>Ver Rutinas</h2>
-            <ul>
-                <li>Rutina 1: Ejercicio A, 10 repeticiones, 3 series</li>
-                <li>Rutina 2: Ejercicio B, 15 repeticiones, 4 series</li>
-            </ul>
-            <button class="back-button" onclick="manageRoutines()">Atrás</button>
-        `;
-    }
-
-    function deleteRoutines() {
-        const main = document.getElementById('main');
-        main.innerHTML = `
-            <h2>Eliminar Rutinas</h2>
-            <ul>
-                <li>Rutina 1 <button onclick="deleteRoutine('Rutina 1')">Eliminar</button></li>
-                <li>Rutina 2 <button onclick="deleteRoutine('Rutina 2')">Eliminar</button></li>
-            </ul>
-            <button class="back-button" onclick="manageRoutines()">Atrás</button>
-        `;
-    }
-
-    function deleteRoutine(routine) {
-        alert(`Rutina ${routine} eliminada.`);
-        deleteRoutines(); // Actualizar la vista de eliminación de rutinas
-    }
-
-    function editUserInfo() {
-        const main = document.getElementById('main');
-        main.innerHTML = `
-            <h2>Editar Información del Usuario</h2>
-            <label>Nombre de Usuario:</label>
-            <input type="text" id="username" value="${userInfo.nombre}"><br><br>
-            <label>Peso:</label>
-            <input type="text" id="weight" value="${userInfo.peso}"><br><br>
-            <label>Altura:</label>
-            <input type="text" id="height" value="${userInfo.altura}"><br><br>
-            <button class="save-button" onclick="saveUserInfo()">Guardar Cambios</button><br>
-            <button class="back-button" onclick="showMainScreen()">Atrás</button>
-        `;
-    }
-
-    function saveUserInfo() {
-        userInfo.nombre = document.getElementById('username').value;
-        userInfo.peso = document.getElementById('weight').value;
-        userInfo.altura = document.getElementById('height').value;
-        alert('Información actualizada con éxito!');
-        showMainScreen();
-    }
-
-    function registerExercise() {
-        alert('Funcionalidad no implementada en la versión web.');
-        showMainScreen();
-    }
-
-    function viewProgress() {
-        const main = document.getElementById('main');
-        main.innerHTML = `
-            <h2>Ver Progreso</h2>
-            <canvas id="weightChart"></canvas><br>
-            <canvas id="heightChart"></canvas><br>
-            <button class="back-button" onclick="showMainScreen()">Atrás</button>
-        `;
-
-        const weightCtx = document.getElementById('weightChart').getContext('2d');
-        new Chart(weightCtx, {
-            type: 'line',
-            data: {
-                labels: ['Día 1', 'Día 2', 'Día 3', 'Día 4', 'Día 5'],
-                datasets: [{
-                    label: 'Peso (kg)',
-                    data: [70, 71, 70.5, 72, 71],
-                    borderColor: 'rgba(75, 192, 192, 1)',
-                    backgroundColor: 'rgba(75, 192, 192, 0.2)',
-                    fill: true
-                }]
-            },
-            options: {
-                responsive: true,
-                plugins: {
-                    legend: {
-                        display: true
-                    },
-                    tooltip: {
-                        callbacks: {
-                            label: function(tooltipItem) {
-                                return tooltipItem.label + ': ' + tooltipItem.raw + ' kg';
+            new Chart(weightCtx, {
+                type: 'line',
+                data: {
+                    labels: ['Lunes', 'Martes', 'Miércoles', 'Jueves', 'Viernes', 'Sábado', 'Domingo'],
+                    datasets: [{
+                        label: 'Peso (kg)',
+                        data: [70, 71, 69, 72, 70, 71, 69],
+                        borderColor: 'rgba(255, 99, 132, 1)',
+                        backgroundColor: 'rgba(255, 99, 132, 0.2)',
+                        fill: true
+                    }]
+                },
+                options: {
+                    responsive: true,
+                    plugins: {
+                        legend: {
+                            display: true
+                        },
+                        tooltip: {
+                            callbacks: {
+                                label: function(tooltipItem) {
+                                    return tooltipItem.label + ': ' + tooltipItem.raw + ' kg';
+                                }
                             }
                         }
                     }
                 }
-            }
-        });
+            });
 
-        const heightCtx = document.getElementById('heightChart').getContext('2d');
-        new Chart(heightCtx, {
-            type: 'line',
-            data: {
-                labels: ['Día 1', 'Día 2', 'Día 3', 'Día 4', 'Día 5'],
-                datasets: [{
-                    label: 'Altura (cm)',
-                    data: [175, 175.2, 175.1, 175.3, 175.2],
-                    borderColor: 'rgba(153, 102, 255, 1)',
-                    backgroundColor: 'rgba(153, 102, 255, 0.2)',
-                    fill: true
-                }]
-            },
-            options: {
-                responsive: true,
-                plugins: {
-                    legend: {
-                        display: true
-                    },
-                    tooltip: {
-                        callbacks: {
-                            label: function(tooltipItem) {
-                                return tooltipItem.label + ': ' + tooltipItem.raw + ' cm';
+            new Chart(heightCtx, {
+                type: 'line',
+                data: {
+                    labels: ['Lunes', 'Martes', 'Miércoles', 'Jueves', 'Viernes', 'Sábado', 'Domingo'],
+                    datasets: [{
+                        label: 'Altura (cm)',
+                        data: [170, 171, 170, 172, 171, 172, 171],
+                        borderColor: 'rgba(54, 162, 235, 1)',
+                        backgroundColor: 'rgba(54, 162, 235, 0.2)',
+                        fill: true
+                    }]
+                },
+                options: {
+                    responsive: true,
+                    plugins: {
+                        legend: {
+                            display: true
+                        },
+                        tooltip: {
+                            callbacks: {
+                                label: function(tooltipItem) {
+                                    return tooltipItem.label + ': ' + tooltipItem.raw + ' cm';
+                                }
                             }
                         }
                     }
                 }
-            }
-        });
-    }
+            });
+        }
 
-    // Inicializar la vista de inicio de sesión al cargar la página
-    window.onload = showLoginScreen;
-</script>
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+        window.onload = showLoginScreen;
+    </script>
 </body>
 </html>
-
