--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
+            background-color: #ffffff; /* Fondo blanco */
             margin: 0;
             padding: 0;
             overflow: hidden;
@@ -16,7 +16,7 @@
             display: flex;
             justify-content: space-between;
             padding: 20px;
-            background-color: #4CAF50;
+            background-color: #333333; /* Gris oscuro */
             color: white;
         }
         #main {
@@ -32,14 +32,18 @@
             margin: 10px;
             font-size: 16px;
             cursor: pointer;
+            background-color: #e0e0e0; /* Gris claro para los botones */
+            color: #333333; /* Color de texto oscuro para contraste */
+            border: none;
+            border-radius: 5px;
         }
         .back-button {
-            background-color: #FF5722;
-            color: white;
+            background-color: #b0b0b0; /* Gris más oscuro para el botón Atrás */
+            color: #333333;
         }
         .save-button {
-            background-color: #4CAF50;
-            color: white;
+            background-color: #e0e0e0; /* Gris claro para el botón Guardar */
+            color: #333333;
         }
         canvas {
             max-width: 100%;
@@ -49,6 +53,8 @@
             width: 200px;
             padding: 8px;
             margin: 5px 0;
+            border: 1px solid #cccccc; /* Borde gris claro para los campos de texto */
+            border-radius: 5px;
         }
     </style>
 </head>
