--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             display: flex;
             justify-content: space-between;
             padding: 20px;
-            background-color: #333333; /* Gris oscuro */
+            background: linear-gradient(135deg, #333333, #555555); /* Gradiente de gris oscuro a gris medio */
             color: white;
         }
         #main {
