--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <div id="login-screen">
-        <h1>Iniciar Sesión</h1>
+        <h1>Iniciar Sesión / Registrar Usuario</h1>
         <input type="text" id="username" placeholder="Nombre de usuario">
         <button onclick="login()">Iniciar Sesión</button>
+        <button onclick="register()">Registrar Usuario</button>
     </div>
 
     <div id="main-screen" style="display:none;">
